# YuzuSoftExtractor

./: CMakeLists.txt  README.md
include/: JSONProcessor.h  evImgCover.h  main.h
src/: JSONProcessor.cpp  evImgCover.cpp  main.cpp
